--- a/projs.html
+++ b/projs.html
@@ -79,12 +79,11 @@
 							</ul>
 							
 							<ul>
-								<h1>Thesis</h1>
+								<h1>Theses</h1>
 								<li><h3><a href="http://eprints.iiserkol.ac.in/644/">Nutation of Sidebands from MASS (Magic Angle Sample Spinning)</h3></a>
 								<p class="hover_change_color"> My Master Thesis in Physics (solid-state, quantum computational) at Indian Institute of Science Education and Research Kolkata.<br/>
 								I have worked in the development of a new quantum master equation related to solid-state magnetic resonance and used quantum simulations
 								for verification and validation.<br/>
-								<em>Grade Received : 9/10</em>
 								</p>
 								<li><h3>Validation of Prediction rules for Counts Outcome in the presence of missing predictor data using 
 								multiple imputation and cross-validation </h3>
@@ -92,7 +91,6 @@
 								I am working in an extension of a method of prediction calibration with missing data in the predictors. The validation of the methods is
 								done with simulations of analysis of previously analysed data and verification with clinical data in collaboration with Leiden University
 								Medical Centre.<br/>
-								<em>Grade pending</em>
 								</p>
 							</ul>
                             
