--- a/cv.html
+++ b/cv.html
@@ -15,4 +15,5 @@ title: CV
   {% include education.html %}
   {% include research.html %}
   {% include industry.html %}
+  {% include publications.html %}
 </main>
