--- a/about.html
+++ b/about.html
@@ -1,30 +1,45 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="system">
-<head>
-  <meta charset="UTF-8">
-  <title>About — Dipro Mondal</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-  <header class="site-header">
-    <a href="index.html" class="logo">DM</a>
-    <nav class="nav">
-      <a href="about.html" aria-current="page">About</a>
-      <a href="cv.html">CV</a>
-      <a href="publications.html">Publications</a>
-    </nav>
+---
+layout: default
+title: About
+---
+
+<main class="page">
+  <header class="page-header">
+    <h1>About Me</h1>
   </header>
 
-  <main>
-    <h1>About Me</h1>
-    <p>I am a statistician focusing on methodological aspects of reliability studies.</p>
-    <h2>Interests</h2>
-    <ul>
-      <li>Statistical methodology</li>
-      <li>Uncertainty quantification</li>
-      <li>Reliability & measurement</li>
-      <li>Reproducibility</li>
-    </ul>
-  </main>
-</body>
-</html>
+  <section class="about-section">
+    <div class="about-grid">
+      <div class="about-photo">
+        <!-- scale down to 5% using HTML attribute -->
+        <img src="assets/img/image.png" alt="Photo of Dipro Mondal" style="width:5%; height:auto;">
+      </div>
+
+      <div class="about-text">
+        <p>
+          I am <strong>Dipro Mondal</strong>, a PhD candidate in Statistics at Maastricht University at the Department of Methodology and Statistics, expected to graduate in December 2025. My research is about planning reliability studies with quantitative outcomes, which focuses on the development of sample size methods, particularly using the intraclass correlation coefficient (ICC).
+        </p>
+        <p>
+          My work emphasizes methodological planning, uncertainty quantification, and reproducible research practices.
+          Alongside methodological contributions, I provide <a href="https://shiny.rstudio.com/" target="_blank">R Shiny</a> apps to make the methods accessible to researchers.
+        </p>
+        <p>
+          I hold two MSc degrees, one in Data Science from Leiden University and another in Physics from IISER Kolkata.
+        </p>
+      </div>
+    </div>
+ <p>You can also find me on:</p>
+  <div class="social-links">
+    <a href="https://www.linkedin.com/in/dipro-mondal-96a85298" target="_blank">
+      <i class="fab fa-linkedin"></i> LinkedIn
+    </a>
+    <a href="https://github.com/DiproMondal" target="_blank">
+      <i class="fab fa-github"></i> GitHub
+    </a>
+    <a href="https://www.researchgate.net/profile/Dipro-Mondal" target="_blank">
+      <i class="fab fa-researchgate"></i> ResearchGate
+    </a>
+  </div>
+
+  </section>
+</main>
