--- a/cv.html
+++ b/cv.html
@@ -5,15 +5,55 @@ title: CV
 
 <main class="page">
   <header class="page-header">
-    <h1>Curriculum Vitae</h1>
-    <p class="lede">Academic and professional background.</p>
-    <p><a class="btn" href="CV.pdf" download>Download Full CV (PDF)</a></p>
+    <h1>Full Curriculum Vitae</h1>
   </header>
 
-  {% include profile.html %}
   {% include skills.html %}
   {% include education.html %}
   {% include research.html %}
   {% include industry.html %}
   {% include publications.html %}
+
+  <section class="cv-section">
+  <h2>Reproducible Tools</h2>
+  <p>Interactive R Shiny apps developed to accompany my research papers:</p>
+  <ul class="shiny-list">
+    <li>
+      <a href="https://dipro.shinyapps.io/sample-size-icc/" target="_blank">
+        Sample size for ICC in one-way ANOVA
+      </a>
+    </li>
+    <li>
+      <a href="https://dipromondal.shinyapps.io/sample-size-ICCagreement-2wayANOVA/" target="_blank">
+        Sample size for ICC (for agreement) in two-way ANOVA (precision)
+      </a>
+    </li>
+    <li>
+      <a href="https://dipromondal.shinyapps.io/sample-size-hypothesistesting/" target="_blank">
+        Sample size for ICC (for agreement) in two-way ANOVA (hypothesis testing)
+      </a>
+    </li>
+  </ul>
+</section>
+  <h2>Social Profiles</h2>
+  <p>You can also find me on:</p>
+  <div class="social-links">
+    <a href="https://www.linkedin.com/in/dipro-mondal-96a85298" target="_blank">
+      <i class="fab fa-linkedin"></i> LinkedIn
+    </a>
+    <a href="https://github.com/DiproMondal" target="_blank">
+      <i class="fab fa-github"></i> GitHub
+    </a>
+    <a href="https://www.researchgate.net/profile/Dipro-Mondal" target="_blank">
+      <i class="fab fa-researchgate"></i> ResearchGate
+    </a>
+  </div>
+
+
+
+  <p><a class="btn" href="CV.pdf" download>Download Full CV (PDF)</a></p>
+<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </main>
+
+
+
