--- a/index.html
+++ b/index.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="system">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dipro Mondal — Home</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-  <header class="site-header">
-    <a href="index.html" class="logo">DM</a>
-    <nav class="nav">
-      <a href="about.html">About</a>
-      <a href="cv.html">CV</a>
-      <a href="publications.html">Publications</a>
-      <a href="mailto:dipro.mondal12ms@gmail.com" class="cta">Contact</a>
-    </nav>
-    <button id="theme-toggle" class="theme-toggle">☀️/🌙</button>
-  </header>
+---
+layout: default
+title: Home
+---
 
+<main class="page">
   <section class="hero">
-    <h1>Hi, I'm Dipro Mondal</h1>
-    <p>Statistician · Reliability studies · Sample size & uncertainty</p>
+    <h1>Welcome!</h1>
+    <p class="lede">
+      Hi, I'm <strong>Dipro Mondal</strong>. Welcome to my homepage.
+    </p>
+    <p>
+      You can explore my 
+      <a href="cv.html">Curriculum Vitae</a>, 
+      <a href="about.html">About Me</a>, 
+      or <a href="mailto:dipro.mondal12ms@gmail.com">Contact me</a>.
+    </p>
   </section>
+</main>
 
-  <footer class="site-footer">
-    <p>© <span id="year"></span> Dipro Mondal</p>
-  </footer>
-  <script src="assets/js/main.js"></script>
-</body>
-</html>
+
