--- a/about.html
+++ b/about.html
@@ -8,27 +8,42 @@ title: About
     <h1>About Me</h1>
   </header>
 
-  <section class="about-section">
-    <div class="about-grid">
-      <div class="about-photo">
-        <!-- scale down to 5% using HTML attribute -->
-        <img src="assets/img/image.png" alt="Photo of Dipro Mondal" style="width:5%; height:auto;">
-      </div>
-
-      <div class="about-text">
-        <p>
-          I am <strong>Dipro Mondal</strong>, a PhD candidate in Statistics at Maastricht University at the Department of Methodology and Statistics, expected to graduate in December 2025. My research is about planning reliability studies with quantitative outcomes, which focuses on the development of sample size methods, particularly using the intraclass correlation coefficient (ICC).
-        </p>
-        <p>
-          My work emphasizes methodological planning, uncertainty quantification, and reproducible research practices.
-          Alongside methodological contributions, I provide <a href="https://shiny.rstudio.com/" target="_blank">R Shiny</a> apps to make the methods accessible to researchers.
-        </p>
-        <p>
-          I hold two MSc degrees, one in Data Science from Leiden University and another in Physics from IISER Kolkata.
-        </p>
-      </div>
+<section class="about-section">
+  <div class="about-grid">
+    <div class="about-photo">
+      <img src="assets/img/image.png" alt="Photo of Dipro Mondal" style="width:5%; height:auto;">
     </div>
- <p>You can also find me on:</p>
+
+    <div class="about-text">
+      <p>
+        I am <strong>Dipro Mondal</strong>, a PhD candidate in Statistics at Maastricht University at the Department of Methodology and Statistics, expected to graduate in December 2025. My research is about planning reliability studies with quantitative outcomes, which focuses on the development of sample size methods, particularly using the intraclass correlation coefficient (ICC).
+      </p>
+      <p>
+        My work emphasizes methodological planning, uncertainty quantification, and reproducible research practices.
+        Alongside methodological contributions, I provide <a href="https://shiny.rstudio.com/" target="_blank">R Shiny</a> apps to make the methods accessible to researchers.
+      </p>
+      <p>
+        I hold two MSc degrees, one in Data Science from Leiden University and another in Physics from IISER Kolkata.
+      </p>
+    </div>
+  </div>
+
+<div class="cv-item">
+  <div class="cv-content">
+    <h3>Research Interests</h3>
+    <ul class="pill-list">
+      <li>Statistical Modelling</li>
+      <li>Mathematical Modelling</li>
+      <li>Optimization Problems</li>
+      <li>Statistical Method Development</li>
+      <li>Uncertainty Quantification</li>
+      <li>Reliability Studies</li>
+    </ul>
+  </div>
+</div>
+
+
+  <p>You can also find me on:</p>
   <div class="social-links">
     <a href="https://www.linkedin.com/in/dipro-mondal-96a85298" target="_blank">
       <i class="fab fa-linkedin"></i> LinkedIn
@@ -40,6 +55,6 @@ title: About
       <i class="fab fa-researchgate"></i> ResearchGate
     </a>
   </div>
+</section>
 
-  </section>
 </main>
