--- a/cv.html
+++ b/cv.html
@@ -13,28 +13,34 @@ title: CV
   {% include research.html %}
   {% include industry.html %}
   {% include publications.html %}
+  {% include presentations.html %}
 
   <section class="cv-section">
-  <h2>Reproducible Tools</h2>
-  <p>Interactive R Shiny apps developed to accompany my research papers:</p>
-  <ul class="shiny-list">
-    <li>
-      <a href="https://dipro.shinyapps.io/sample-size-icc/" target="_blank">
-        Sample size for ICC in one-way ANOVA
-      </a>
-    </li>
-    <li>
-      <a href="https://dipromondal.shinyapps.io/sample-size-ICCagreement-2wayANOVA/" target="_blank">
-        Sample size for ICC (for agreement) in two-way ANOVA (precision)
-      </a>
-    </li>
-    <li>
-      <a href="https://dipromondal.shinyapps.io/sample-size-hypothesistesting/" target="_blank">
-        Sample size for ICC (for agreement) in two-way ANOVA (hypothesis testing)
-      </a>
-    </li>
-  </ul>
-</section>
+    <h2>Reproducible Tools</h2>
+    <p>Interactive R Shiny apps developed to accompany my research papers:</p>
+    <ul class="shiny-list">
+      <li>
+        <a href="https://dipro.shinyapps.io/sample-size-icc/" target="_blank">
+          Sample size for ICC in one-way ANOVA
+        </a>
+      </li>
+      <li>
+        <a href="https://dipromondal.shinyapps.io/sample-size-ICCagreement-2wayANOVA/" target="_blank">
+          Sample size for ICC (for agreement) in two-way ANOVA (precision)
+        </a>
+      </li>
+      <li>
+        <a href="https://dipromondal.shinyapps.io/sample-size-hypothesistesting/" target="_blank">
+          Sample size for ICC (for agreement) in two-way ANOVA (hypothesis testing)
+        </a>
+      </li>
+    </ul>
+  </section>
+
+  
+
+  {% include achievements.html %}
+
   <h2>Social Profiles</h2>
   <p>You can also find me on:</p>
   <div class="social-links">
@@ -48,12 +54,6 @@ title: CV
       <i class="fab fa-researchgate"></i> ResearchGate
     </a>
   </div>
-
-
-
   <p><a class="btn" href="CV.pdf" download>Download Full CV (PDF)</a></p>
-<script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </main>
-
-
-
+<script src="assets/js/main.js"></script>
