--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ title: Home
     </p>
     <p>
       You can explore my 
-      <a href="cv.html">Curriculum Vitae</a>, 
-      <a href="about.html">About Me</a>, 
+      <a href="about.html">About Me</a>,
+      <a href="cv.html">Curriculum Vitae</a>, and
+      <a href="about.html">Hobbies</a> sections, 
       or <a href="mailto:dipro.mondal12ms@gmail.com">Contact me</a>.
     </p>
   </section>
